[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
error-chain = "0.12.4"
log = "0.4.22"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking"] }
tokio = { version = "1.41.0", features = ["full", "macros", "rt-multi-thread"] }
xml = {version = "0.8.20" }
